# video-transcriber

./: .gitignore  README.md  WINDOWS_STARTUP_GUIDE.md  doc.md  pyproject.toml  requirement.txt  run_web.bat  run_web.sh  setup.py
video_translator/: __init__.py  ass_subtitle_generator.py  audio_processor.py  cli.py  run_web_server.py  single_video_translation.py  utils.py  web_server.py
video_translator/static/: script.js  style.css
video_translator/templates/: index.html
