[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_translator"
version = "0.1.0"
authors = [
    {name = "calcite", email = "your.email@example.com"},
]
description = "A tool for translating videos with subtitles"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "av==16.0.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "coloredlogs==15.0.1",
    "ctranslate2==4.6.0",
    "faster-whisper==1.2.0",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "fsspec==2025.9.0",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.3",
    "humanfriendly==10.0",
    "idna==3.10",
    "mpmath==1.3.0",
    "numpy==2.2.6",
    "onnxruntime==1.23.1",
    "packaging==25.0",
    "protobuf==6.32.1",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "sympy==1.14.0",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/video_translator"
"Bug Tracker" = "https://github.com/yourusername/video_translator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_translator*"]
exclude = ["tests*"]

[project.scripts]
video-translator = "video_translator.cli:main"
